crates/mun_codegen/src/snapshots/test__array_type_group_ir.snap
---
source: crates/mun_codegen/src/test.rs
expression: "fn main(a:[int]) {}"
---
; ModuleID = 'group_name'
source_filename = "group_name"

